# realpython

./: .gitignore
awesome_pygame_project/space_rocks/: __main__.py  game.py  models.py  utils.py
binary_search/: benchmark.py  binary_search.ipynb  download_imdb.py
binary_search/search/: __init__.py  binary.py  linear.py  random.py
click_calc/: pyproject.toml
click_calc/calc.egg-info/: PKG-INFO
click_calc/click_calc/: __main__.py  commands.py
click_calc/click_calc.egg-info/: PKG-INFO
click_tut/: add.py  calc.py  hello.py  lorem.md  ls.py  nasa.py  realpython.md  rectangle.py  tail.py  upper_greet.py  user.py
corr/: correlation.ipynb
de/: de interview.ipynb
dicts/: dicts.ipynb
dock/: Dockerfile  headlines.py
redis_tut/: red.py  redis_tut.ipynb
rest/: build_database.py  models.py  notes.py  people.py  server.py
rp/: argv.py  build_database.py  config.py  models.py  people.py  server.py
rpmock/: rpmock.py
rpmock/tests/: test_rpmock.py
timers/: greeter.py  my_timer.py  timers.py
v-rp/: pyvenv.cfg
